--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,22 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.36.0", features = ["full"] }
-log = "0.4"
-env_logger = "0.11"
+async-stream = "0.3.0"
+atoi = "2.0.0"
+bytes = "1"
+clap = { version = "4.2.7", features = ["derive"] }
+tokio = { version = "1", features = ["full"] }
+tokio-stream = "0.1"
+tracing = "0.1.34"
+tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
+# Implements the types defined in the OTel spec
+opentelemetry = { version = "0.20.0", optional = true }
+# Integration between the tracing crate and the opentelemetry crate
+tracing-opentelemetry = { version = "0.21.0", optional = true }
+# Provides a "propagator" to pass along an XrayId across services
+opentelemetry-aws = { version = "0.8.0", optional = true }
+# Allows you to send data to the OTel collector
+opentelemetry-otlp = { version = "0.13.0", optional = true }
+
+[features]
+otel = ["dep:opentelemetry", "dep:tracing-opentelemetry", "dep:opentelemetry-aws", "dep:opentelemetry-otlp"]
