--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4"
+chrono-tz = "0.6"
 async-stream = "0.3.0"
 atoi = "2.0.0"
 bytes = "1"
